force-app/main/default/objects/Boarding_Pass__c/Boarding_Pass__c.object-meta.xml
<CustomObject>
    <label>Boarding Pass</label>
    <nameField>
        <label>Boarding Pass Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boarding Passes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>