force-app/main/default/objects/Boarding_Pass__c/fields/Meal__c.field-meta.xml
<CustomField>
    <fullName>Meal__c</fullName>
    <label>Meal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>