force-app/main/default/objects/Boarding_Pass__c/fields/Passenger__c.field-meta.xml
<CustomField>
    <fullName>Passenger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passenger</label>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>Boarding Passes</relationshipLabel>
    <relationshipName>Boarding_Passes</relationshipName>
    <type>Lookup</type>
</CustomField>