force-app/main/default/objects/Boarding_Pass__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Boarding Passes</relationshipLabel>
    <relationshipName>Boarding_Passes</relationshipName>
    <type>Lookup</type>
</CustomField>