force-app/main/default/objects/Boarding_Pass__c/validationRules/meal_when_food_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>meal_when_food_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Meal__c ) &amp;&amp;  ISBLANK( Ticket__r.Food_Menu__c )</errorConditionFormula>
    <errorDisplayField>Meal__c</errorDisplayField>
    <errorMessage>Please enter Food</errorMessage>
</ValidationRule>